--- a/hugo.yaml
+++ b/hugo.yaml
@@ -27,6 +27,7 @@ params:
       - name: Archives
         url: archives
 
-  assets:
-    cover:
-      hiddenInSingle: false
+  cover:
+    hidden: true # hide everywhere but not in structured data
+    hiddenInList: true # hide on list pages and home
+    hiddenInSingle: false # show on single page
