--- a/hugo.yaml
+++ b/hugo.yaml
@@ -32,6 +32,11 @@ params:
       - name: Blog
         url: posts
 
+  socialIcons:
+    - name: GitHub
+      title: "Follow me on GitHub"
+      url: "https://github.com/syaghoubi00"
+
   assets:
     disableHLJS: true # disable Highlight.js to use Hugo native Chroma syntax hl
 
