--- a/hugo.yaml
+++ b/hugo.yaml
@@ -19,6 +19,9 @@ menu:
     - name: Search
       url: search
       weight: 20
+    - name: Tags
+      url: tags
+      weight: 30
 
 params:
   showToc: true
