--- a/hugo.yaml
+++ b/hugo.yaml
@@ -32,6 +32,7 @@ params:
   ShowPostNavLinks: true # add navigation buttons at the end of a single post
   ShowBreadcrumbs: true # adds breadcrumb navigation above posts title
   ShowRssButtonInSectionTermList: true # show RSS feed button on sections
+  ShowReadingTime: true
 
   profileMode:
     enabled: true
