--- a/hugo.yaml
+++ b/hugo.yaml
@@ -62,6 +62,17 @@ params:
     text: "Suggest a Change"
     appendFilePath: true # append path of post to edit link
 
+  ## search settings
+  fuseOpts:
+    isCaseSensitive: false
+    shouldSort: true
+    location: 0
+    distance: 1000
+    threshold: 0.4
+    minMatchCharLength: 0
+    limit: 10 # refer: https://www.fusejs.io/api/methods.html#search
+    keys: ["title", "permalink", "summary", "content"]
+
 markup:
   highlight:
     lineNos: true
