feat(theme-config): add share buttons at bottom of posts

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -33,6 +33,7 @@ params:
   showBreadcrumbs: true # adds breadcrumb navigation above posts title
   showRssButtonInSectionTermList: true # show RSS feed button on sections
   showReadingTime: true
+  showShareButtons: true
 
   profileMode:
     enabled: true
