--- a/hugo.yaml
+++ b/hugo.yaml
@@ -22,6 +22,9 @@ menu:
     - name: Tags
       url: tags
       weight: 30
+    - name: About
+      url: about-me
+      weight: 40
     - name: Contact
       url: contact
       weight: 50
