feat(config): add linkedin social icon

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -43,6 +43,8 @@ socialIcons:
   - name: GitHub
     title: "Follow me on GitHub"
     url: "https://github.com/syaghoubi00"
+  - name: LinkedIn
+    url: "https://linkedin.com/in/sebastian-yaghoubi-853a68354"
   - name: Spotify
     title: "Check out my Playlists on Spotify"
     url: "https://open.spotify.com/user/312sumiamqqrim5njfqc3io42vzu?si=a0e230f1c38d4aa7"
