--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -25,7 +25,7 @@ profileMode:
   imageUrl: "pfp.jpg"
   subtitle: |
     ---
-    Economics and Computer Information Science Student :student:
+    Economics and Computer Science Student :student:
 
     Algorithmic Trader by Day :sun_with_face:
 
