--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -1,8 +1,5 @@
 assets:
-  favicon: "favicon.ico"
-  favicon16x16: "favicon-16x16"
-  favicon32x32: "favicon-32x32"
-  apple_touch_icon: "apple-touch-icon.png"
+  favicon: "assets/favicon.ico"
 cover:
   hidden: true # hide everywhere but not in structured data
   hiddenInList: true # hide on list pages and home
