feat: add bluesky social icon

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -47,6 +47,9 @@ socialIcons:
     url: "https://github.com/syaghoubi00"
   - name: LinkedIn
     url: "https://linkedin.com/in/sebastian-yaghoubi-853a68354"
+  - name: bluesky
+    title: "Where I Post All the Random Stuff I Read"
+    url: "https://bsky.app/profile/syaghoubi.bsky.social"
   - name: Spotify
     title: "Check out my Playlists on Spotify"
     url: "https://open.spotify.com/user/312sumiamqqrim5njfqc3io42vzu?si=a0e230f1c38d4aa7"
