feat: update site subtitle

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -27,7 +27,7 @@ profileMode:
   imageUrl: "pfp.jpg"
   subtitle: |
     ---
-    Economics and Computer Science Student :student:
+    Economics and Computer Science :computer:
 
     Algorithmic Trader by Day :sun_with_face:
 
