feat: add instagram

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -50,6 +50,8 @@ socialIcons:
   - name: bluesky
     title: "Where I Post All the Random Stuff I Read"
     url: "https://bsky.app/profile/syaghoubi.bsky.social"
+  - name: Instagram
+    url: "https://www.instagram.com/sebastianyaghoubi/"
   - name: Spotify
     title: "Check out my Playlists on Spotify"
     url: "https://open.spotify.com/user/312sumiamqqrim5njfqc3io42vzu?si=a0e230f1c38d4aa7"
